Fix pagination links that now wrap within column

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3760,6 +3760,7 @@ input[type="button"].btn-block {
 
 .pagination {
   display: flex;
+  flex-wrap: wrap;
   padding-left: 0;
   list-style: none;
   border-radius: 0.25rem; 
